[project]
name = "openai-webrtc"
version = "0.1.0"
description = ""
authors = [
    {name = "Raiko Funakami",email = "raiko.funakami@access-company.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiortc (>=1.10.1,<2.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
